# GameFrameService

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.cpp  make_release.sh  server.conf.example  server.cpp
src/: benchmark.cpp  client.cpp  redis_client.cpp  redis_client.hpp  room_manager.cpp  room_manager.hpp  server.cpp  session.cpp  session.hpp  testing_position.cpp  testing_replay.cpp
src/models/: frame.hpp  game_models.hpp  message.hpp  player.hpp  protocol.hpp  room.hpp
